static/style.styl
html, body
	height 100%
	width 100%
	margin 0
	padding 0

.app
	padding-bottom 50px
.logo
	font-family: 'Raleway', sans-serif
.landing
	background-color: black
	height 100%
	width 100%
	.bg
		height 100%
		width 100%
		background-image url(/img/modified.jpg)
		background-position center center
		background-repeat no-repeat
		display flex
		flex-direction column
	.centerBox
		max-width 100%
		margin auto
		color white
		display flex
		flex-direction column
		.logo
			// font-size 1000%
			font-size 20vmin
			text-align center
		.loginButton
			color inherit
			font-style inherit
			margin auto
			background-color transparent
			border solid
			border-width 2px
			border-radius 5px
			border-color white
			padding 20px 50px
			font-weight 200%
			font-size 110%
			letter-spacing 3px
		img
			max-width 100%
			max-height 200px
.navbar
	margin-bottom 0px

